objects/Carve_Out__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_amt__c</fullName>
        <label>Deferred Revenue Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_status__c</fullName>
        <label>Invoice Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_ID__c</fullName>
        <externalId>true</externalId>
        <label>NS ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NS_Invoice_Number__c</fullName>
        <label>NS Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Order_Number__c</fullName>
        <label>NS Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Order_line_num__c</fullName>
        <label>NS Order line num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Carve Outs</relationshipLabel>
        <relationshipName>Carve_Outs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Carve Outs</relationshipLabel>
        <relationshipName>Carve_Outs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Ref_Number__c</fullName>
        <label>Other Ref Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Carve Outs</relationshipLabel>
        <relationshipName>Carve_Outs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recognized_Revenue_amt__c</fullName>
        <label>Recognized Revenue Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Status__c</fullName>
        <label>Revenue Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Effective_date__c</fullName>
        <label>Sale Effective Date</label>
        <type>Date</type>
    </fields>
    <label>Carve Out</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NS_ID__c</columns>
        <columns>Line_Number__c</columns>
        <columns>NAME</columns>
        <columns>Order_Number__c</columns>
        <columns>NS_Invoice_Number__c</columns>
        <columns>NS_Order_Number__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_status__c</columns>
        <columns>Other_Ref_Number__c</columns>
        <columns>Recognized_Revenue_amt__c</columns>
        <columns>Deferred_Revenue_amt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Carve Out Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carve Outs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>